Added meta tags for Social Media

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sandrine Elander is Front End Developer, SCRUM Master and IT Project Manager at Mindstorming AB"
     />
+    <meta property="og:title" content="Sandrine Elander's portfolio">
+    <meta property="og:description" content="Sandrine Elander is Front End Developer, SCRUM Master and IT Project Manager at Mindstorming AB">
+    <meta property="og:image" content="https://www.mindstorming.com/thumbnail.jpg">
+    <meta property="og:url" content="https://www.mindstorming.com/index.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:site_name" content="Mindstorming AB">
+    <meta name="twitter:image:alt" content="Sandrine Elander's portfolio">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192-mindstorming.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
