Adjusted meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Sandrine Elander's portfolio">
-    <meta property="og:description" content="Sandrine Elander is Front End Developer, SCRUM Master and IT Project Manager at Mindstorming AB">
+    <meta property="og:description" content="Front End Developer, SCRUM Master and IT Project Manager at Mindstorming AB">
     <meta property="og:image" content="https://www.mindstorming.se/thumbnail.jpg">
-    <meta property="og:url" content="https://www.mindstorming.se/index.html">
+    <meta property="og:url" content="https://www.mindstorming.se">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Mindstorming AB">
     <meta name="twitter:image:alt" content="Sandrine Elander's portfolio">
